[gd_scene load_steps=7 format=2]

[ext_resource path="res://sprites/Light Gradient.png" type="Texture" id=1]
[ext_resource path="res://sounds/scream_near.wav" type="AudioStream" id=2]
[ext_resource path="res://Enemy.gd" type="Script" id=3]
[ext_resource path="res://sounds/footstep.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="CircleShape2D" id=2]
radius = 100.0

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 1 )
texture_scale = 5.0
color = Color( 1, 0, 0, 1 )
energy = 0.0
shadow_enabled = true

[node name="Tween" type="Tween" parent="Light2D"]

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -80.0

[node name="Range" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 2 )

[node name="FootstepTimer" type="Timer" parent="."]
wait_time = 2.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootstepTimer"]
stream = ExtResource( 4 )
volume_db = -80.0
[connection signal="finished" from="Scream" to="." method="_on_Scream_finished"]
[connection signal="body_entered" from="Range" to="." method="_on_Range_body_entered"]
[connection signal="timeout" from="FootstepTimer" to="." method="_on_FootstepTimer_timeout"]
[connection signal="finished" from="FootstepTimer/AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
